--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 *.war
 *.ear
 
+# Garder les bibliothèques de cathy :
+!itextpdf-5.4.4-javadoc.jar
+!itextpdf-5.4.4.jar
+!itextpdf-5.4.4-sources.jar
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
